Closed
Bug 585174
Opened 15 years ago
Closed 15 years ago
JM: Fix x86_64 tracejit integration
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: sstangl, Unassigned)
References
Details
Attachments
(1 file)
1.88 KB,
patch
|
Details | Diff | Splinter Review |
Attempting to run 64-bit moo with -m -j causes a segfault. This should be fixed.
Reporter | ||
Comment 1•15 years ago
|
||
This patch implements the JaegerFromTracer glue for x86_64, making most of the tests pass. The failing tests trip asserts within the tracer, reproduced below:
python trace-test/trace-test.py dbg64/js -o sunspider/check-crypto-aes.js
Assertion failure: !f->typeMap.matches(peer->typeMap), at ../jstracer.cpp:1589
python trace-test/trace-test.py dbg64/js -o basic/testNewObject.js
Assertion failure: LIR type error (start of writer pipeline): arg 1 of 'ui2uq' is 'immq' which has type int64 (expected int32): 0 (../nanojit/LIR.cpp:2834)
Reporter | ||
Comment 2•15 years ago
|
||
http://hg.mozilla.org/projects/jaegermonkey/rev/fc549b24a1af
Pushed despite nanojit failures. Dvander says he'll look into them.
![]() |
||
Updated•15 years ago
|
Blocks: JaegerBrowser
Reporter | ||
Comment 3•15 years ago
|
||
Ah, a long-forgotten bug.
No longer reproduces on tip. Closing.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•