[JAEGER] x64 tracejit integration. b=585174, r=dvander.

Trips asserts in nanojit when running trace-tests.